re PR c++/24817 (g++ accepts multiple function template declarations even if exception-specification doesn't match.)

PR c++/24817
	* decl.c (check_redeclaration_exception_specification): New
	function.
	(duplicate_decls): Use it.
	* error.c (fndecl_to_string): Print the template parameter list.
	PR c++/24817
	* g++.dg/eh/spec8.C: New test.

From-SVN: r106884